--- a/portfolio.css
+++ b/portfolio.css
@@ -47,6 +47,7 @@ nav ul {
     display: flex;
     align-items: center;
 }
+/*shared style*/
 .btn-primary{
     background-color: #FD6E0A;
     font-weight: bold;
@@ -55,6 +56,21 @@ nav ul {
     border-radius: 5px;
     font-size: 20px;
     border: none;
+}
+.secondary-background{
+    background-color: rgb(255, 248, 243);;
+}
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818
+}
+.section-description{
+    font-size: 18px;
+    color: #757575;
+}
+.text-center{
+    text-align: center;
 }
 /*banner*/
 .banner{
@@ -77,4 +93,43 @@ font-weight: 600;
 }
 .banner-content{
 margin-left: 230px;
+}
+/*about styles*/
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+}
+/*main styles*/
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+    margin-top: 130px;
+}
+main  section {
+    margin: top 130px;
+    margin-bottom: 130px;
+}
+.about-items{
+    display: flex;
+    justify-content: space-around;
+
+}
+.item-description{
+    font-weight: bold;
+}
+.box{
+    display: flex;
+}
+.skill-description{
+    justify-content: left;
+}
+.intro{
+    text-align: center;
+}
+.skill-container{
+    padding: 30px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0,0, 0.6);
+    margin: 10px;
+    border-radius: 5px;
+    
 }
